<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/title"
    android:textSize="30sp"
    android:gravity="center"/>
    <EditText
        android:id="@+id/length_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/length_key"
        android:inputType="number"/>
    <Button
        android:id="@+id/button_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_apply"/>
<EditText
    android:id="@+id/text_encry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/text_encry"
    android:inputType="number"/>
<Button
    android:id="@+id/button_encry"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_encry"/>
<EditText
    android:id="@+id/encry_result"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/encry_result"/>
<EditText
    android:id="@+id/text_decry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/text_decry"
    android:inputType="number"/>
<Button
    android:id="@+id/button_decry"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_decry"/>
<EditText
    android:id="@+id/decry_result"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/decry_result" />
    <EditText
        android:id="@+id/random_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/random_one"/>
    <EditText
        android:id="@+id/random_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/random_two"/>
    <EditText
        android:id="@+id/prime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prime"/>
    <EditText
        android:id="@+id/public_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/public_key"/>
    <EditText
        android:id="@+id/private_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/private_key"/>
</LinearLayout>